@@ -485,3 +485,7 @@ div.bagDetails-page div.widget h3 { color:#002575; }
 div.bagDetails-page div.widget table.table-striped tbody td { border-top-color:#E2F5FE; }
 div.bagDetails-page div.widget table.table-striped tbody tr:nth-child(odd) td { background-color:#FBFDFE; }
 div.bagDetails-page div.widget table.table-striped tbody tr:hover td { background-color:#FFF3D3; }
+
+.intermine .im-column-th .dropdown-menu:after {
+  border-bottom-color: #002575;
+}
