@@ -408,3 +408,7 @@ div.bagDetails-page div.widget table.table-striped tbody tr:hover td { backgroun
 .table td.im-highlight a { font-weight:normal; color:#5C0075; }
 .im-table-container .active { background:#FFF; color:#000; }
 .dropdown.open > .im-th-button { background: transparent; }
+
+.intermine .im-column-th .dropdown-menu:after {
+  border-bottom-color: #5C0075;
+}
