@@ -447,3 +447,7 @@ div.bagDetails-page div.widget table.table-striped tbody tr:hover td { backgroun
 .bootstrap .table td,
 .popover-content .table td { padding:2px; }
 .bootstrap ul.dropdown-menu a:hover { color:#FFF !important; }
+
+.intermine .im-column-th .dropdown-menu:after {
+  border-bottom-color: #000;
+}
