@@ -19,6 +19,7 @@
 #329 - Do nothing if nothing is entered in search boxes on Home page
 #341 - Make homepage boxes work with any length of text
 #343 - Homepage boxes use CSS3 not background images
+#348 - Results tables dropdown menus theme colors
 
 intermine-list-widgets#164 - Select all items in a widget list if none are selected
 
